feat: Add filmstrip image animation
Implements a scrolling filmstrip animation for images. This is achieved by:
- Adding a new `scroll` animation to Tailwind CSS.
- Creating CSS keyframes for the scrolling effect.
- Applying the animation and pause-on-hover functionality to a new section.
- Adding a new state variable `filmImages` to manage the images in the filmstrip.
- Importing the `Images` icon from `lucide-react`.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
               slate: {
                 850: '#1e293b', // Custom dark slate
               }
+            },
+            animation: {
+              'scroll': 'scroll 40s linear infinite',
             }
           }
         }
@@ -46,6 +49,18 @@
       .scrollbar-hide {
           -ms-overflow-style: none;
           scrollbar-width: none;
+      }
+      
+      /* Filmstrip Animation */
+      @keyframes scroll {
+        0% { transform: translateX(0); }
+        100% { transform: translateX(-50%); }
+      }
+      .animate-scroll {
+        animation: scroll 40s linear infinite;
+      }
+      .pause-on-hover:hover {
+        animation-play-state: paused;
       }
     </style>
   <script type="importmap">
